# cpp-decorators

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  cpp_decorators.sln  cpp_decorators.vcxproj  cpp_decorators.vcxproj.filters  generate_sln.bat
one_header_file/: cpp_decorators.h
tests/: cpp_decorator_basic_tests.cpp  cpp_multiple_decorators_tests.cpp
